creates extremely basic setup of gameboard

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="./styles/CSS/style.css">
 </head>
 <body>
 
 <main class="main">
     <div class="gameboard">
-        <div class="game-section"></div>
-        <div class="game-section"></div>
-        <div class="game-section"></div>
-        <div class="game-section"></div>
+        <div class="game-section" id="section-green"></div>
+        <div class="game-section" id="section-red"></div>
+        <div class="game-section" id="section-yellow"></div>
+        <div class="game-section " id="section-blue"></div>
+        <!-- <div class="game-section selected" id="section-blue"></div> -->
+        <!-- <div class="console"></div> -->
     </div>
 </main>
 </body>
