--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./main.js" defer></script>
     <link rel="stylesheet" href="./styles/CSS/style.css">
 </head>
 <body>
 
 <main class="main">
     <div class="gameboard">
-        <div class="game-section" id="section-green"></div>
-        <div class="game-section" id="section-red"></div>
-        <div class="game-section" id="section-yellow"></div>
-        <div class="game-section " id="section-blue"></div>
+        <div class="game-section" id="section-0"></div>
+        <div class="game-section" id="section-1"></div>
+        <div class="game-section" id="section-2"></div>
+        <div class="game-section " id="section-3"></div>
         <!-- <div class="game-section selected" id="section-blue"></div> -->
         <!-- <div class="console"></div> -->
     </div>
 </main>
+<button onclick="game(2)" id="start">Start</button>
 </body>
+<script type="text/javascript" src="./main.js" defer></script>
+
 </html>
