trying to get sections to light up and turn off in sequence. Not yet successful

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <!-- <div class="console"></div> -->
     </div>
 </main>
-<button onclick="game(2)" id="start">Start</button>
+<button onclick="compTurn()" id="start">On</button>
+<button onclick="compTurn()" id="start">Off</button>
+<!-- <button onclick="game()" id="start">Start</button> -->
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
 
