--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
 
 <main class="main">
     <div class="gameboard">
-        <div class="game-section" id="section-0"></div>
-        <div class="game-section" id="section-1"></div>
-        <div class="game-section" id="section-2"></div>
-        <div class="game-section " id="section-3"></div>
-        <!-- <div class="game-section selected" id="section-blue"></div> -->
+        <section class="game-section" id="0"></section>
+        <section class="game-section" id="1"></section>
+        <section class="game-section" id="2"></section>
+        <section class="game-section" id="3"></section>
         <!-- <div class="console"></div> -->
     </div>
 </main>
-<button onclick="compTurn()" id="start">On</button>
-<button onclick="compTurn()" id="start">Off</button>
-<!-- <button onclick="game()" id="start">Start</button> -->
+<button onclick="compTurn()" id="start">Start</button>
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
 
