--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 
 <main class="main">
+    <div id="myModal">
+
+    </div>
     <div class="gameboard">
         <section class="game-section" id="0"></section>
         <section class="game-section" id="1"></section>
@@ -18,7 +21,8 @@
         <!-- <div class="console"></div> -->
     </div>
 </main>
-<button onclick="compTurn()" id="start">Start</button>
+<button onclick="compTurn()" id="start">Computer's turn</button>
+<button onclick="userTurn()" id="start">User's turn</button>
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
 
