--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
 <main class="main">
-    <div id="myModal">
-
+    <div id="myModal" >
+        
     </div>
     <div class="gameboard">
         <section class="game-section" id="0"></section>
@@ -21,8 +21,10 @@
         <!-- <div class="console"></div> -->
     </div>
 </main>
+<h3 id="score"> Score: 0</h3> 
 <button onclick="compTurn()" id="start">Computer's turn</button>
-<button onclick="userTurn()" id="start">User's turn</button>
+<!-- <button onclick="userTurn()" id="start">User's turn</button> -->
+
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
 
