adds game score and high score

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <!-- <div class="console"></div> -->
     </div>
 </main>
-<h3 id="score"> Score: 0</h3> 
+<h3 id="userScore"> Score: 0</h3> 
+<h3 id="highScore"> High Score: 0</h3> 
 <button onclick="compTurn()" id="start">Computer's turn</button>
 <!-- <button onclick="userTurn()" id="start">User's turn</button> -->
 
