--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 
 <main class="main">
-    <div id="myModal" >
-        
+    <!-- <h3 id="gameStatus"> Hey!</h3> -->
+    <h3 id="gameStatus"> Hey!</h3>
+    <div id="myModal">
     </div>
     <div class="gameboard">
         <section class="game-section" id="0"></section>
@@ -25,7 +26,6 @@
 <h3 id="highScore"> High Score: 0</h3> 
 <button onclick="compTurn()" id="start">Computer's turn</button>
 <!-- <button onclick="userTurn()" id="start">User's turn</button> -->
-
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
 
