cleans up styling for gameover modal

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </main>
 <h3 id="userScore"> Score: 0</h3> 
 <h3 id="highScore"> High Score: 0</h3> 
-<button onclick="compTurn()" id="start">Computer's turn</button>
+<button onclick="compTurn()" id="start">Start game</button>
 <!-- <button onclick="userTurn()" id="start">User's turn</button> -->
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
