continues working on userTurn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <main class="main">
     <!-- <h3 id="gameStatus"> Hey!</h3> -->
-    <h3 id="gameStatus"> Hey!</h3>
+    <h3 id="gameStatus"> Welcome to Simon!</h3>
     <div id="myModal">
     </div>
     <div class="gameboard">
