cleans up styling for modals

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 <body>
 
     <main class="main">
-        <!-- <h3 id="gameStatus"> Hey!</h3> -->
         <h3 id="gameStatus"> Welcome to Simon!</h3>
         <div id="compTurnModal" class='modal'>
             <div class="modal-content">
-                <h2>Computer's turn</h2>
+                <!-- <h2>Computer's turn</h2> -->
             </div>
         </div>
         <div id="gameOverModal" class='modal'>
