adds hover to game sections

--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
 
     <main class="main">
         <h3 id="gameStatus"> Welcome to Simon!</h3>
-        <div id="compTurnModal" class='modal'>
-            <div class="modal-content">
-                <!-- <h2>Computer's turn</h2> -->
-            </div>
-        </div>
         <div id="gameOverModal" class='modal'>
             <div class="modal-content">
                 <h2>Game Over ! ! !</h2>
@@ -26,10 +21,13 @@
             </div>
         </div>
         <div class="gameboard">
-            <section class="game-section" id="0"></section>
-            <section class="game-section" id="1"></section>
-            <section class="game-section" id="2"></section>
-            <section class="game-section" id="3"></section>
+            <!-- <div class="lightBox"> -->
+                
+                <section class="game-section" id="0"></section>
+                <section class="game-section" id="1"></section>
+                <section class="game-section" id="2"></section>
+                <section class="game-section" id="3"></section>
+            <!-- </div> -->
             <!-- <div class="console"></div> -->
         </div>
     </main>
