adds some more styling to game section

--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
                 <button onclick="newGame()">Start new game</button>
             </div>
         </div>
+        <!-- <div class="lightBox">
+            hello
+            </div> -->
         <div class="gameboard">
-            <!-- <div class="lightBox"> -->
                 
                 <section class="game-section" id="0"></section>
                 <section class="game-section" id="1"></section>
                 <section class="game-section" id="2"></section>
                 <section class="game-section" id="3"></section>
-            <!-- </div> -->
             <!-- <div class="console"></div> -->
         </div>
     </main>
