starts getting gameboard lightbox setup

--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
                 <button onclick="newGame()">Start new game</button>
             </div>
         </div>
-        <!-- <div class="lightBox">
-            hello
-            </div> -->
+        <div class="lightBox">
+            <!-- hello -->
+            <!-- </div> -->
         <div class="gameboard">
-                
+                <!-- nope -->
                 <section class="game-section" id="0"></section>
                 <section class="game-section" id="1"></section>
                 <section class="game-section" id="2"></section>
                 <section class="game-section" id="3"></section>
             <!-- <div class="console"></div> -->
+        </div>
         </div>
     </main>
     <h3 id="userScore"> Score: 0</h3>
