adds initial tooltip

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <h3 id="userScore"> Score: 0</h3>
     <h3 id="highScore"> High Score: 0</h3>
     <button onclick="compTurn()" id="start">New game</button>
+    <!-- <span data-text="Testing that this works" class="tooltip">About Simon</span> -->
+    <h5 data-text="Testing that this works" class="tooltip">About Simon</h5>
     <!-- <button onclick="userTurn()" id="start">User's turn</button> -->
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
