finalizes text for tooltip and adds credit

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
                 <section class="game-section" id="3"></section>
             <!-- <div class="console"></div> -->
         </div>
-    </main>
+    <!-- </main> -->
     <h3 id="userScore"> Score: 0</h3>
     <h3 id="highScore"> High Score: 0</h3>
     <button onclick="compTurn()" id="start">New game</button>
     <!-- <span data-text="Testing that this works" class="tooltip">About Simon</span> -->
-    <h5 data-text="Testing that this works" class="tooltip">About Simon</h5>
-    <!-- <button onclick="userTurn()" id="start">User's turn</button> -->
+<!-- </main> -->
+    <h5 data-html='true' data-text="Based on the classic handheld game of the same name, Simon is a simple one person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it. One mistake and the game is over!" class="tooltip">About Simon</h5>
+    <p class="footer">Built by <a href='https://www.github.com/enbre' target='_blank' > Noah Brezel</a> </p>
+</main>
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
 
