--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <main class="main">
-        <h3 id="gameStatus"> Welcome to Simon!</h3>
+        <h1 id="gameStatus"> Welcome to Simon!</h1>
         <div id="gameOverModal" class='modal'>
             <div class="modal-content">
                 <h2>Game Over ! ! !</h2>
@@ -37,7 +37,8 @@
     <button onclick="compTurn()" id="start">New game</button>
     <!-- <span data-text="Testing that this works" class="tooltip">About Simon</span> -->
 <!-- </main> -->
-    <h5 data-html='true' data-text="Based on the classic handheld game of the same name, Simon is a simple one person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it. One mistake and the game is over!" class="tooltip">About Simon</h5>
+    <h5 data-html='true' data-text="Based on the classic handheld game of the same name, Simon is a simple one person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it. 
+    One mistake and the game is over!!" class="tooltip">About Simon</h5>
     <p class="footer">Built by <a href='https://www.github.com/enbre' target='_blank' > Noah Brezel</a> </p>
 </main>
 </body>
