working on transition bug on the tooltip

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <button onclick="compTurn()" id="start">New game</button>
     <!-- <span data-text="Testing that this works" class="tooltip">About Simon</span> -->
 <!-- </main> -->
-    <h5 data-html='true' data-text="Based on the classic handheld game of the same name, Simon is a simple one person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it. 
+    <h5 data-html='true' data-text="Based on the classic handheld game of the same name, Simon is a simple one-person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat itgsdfgsdrf. 
     One mistake and the game is over!!" class="tooltip">About Simon</h5>
     <p class="footer">Built by <a href='https://www.github.com/enbre' target='_blank' > Noah Brezel</a> </p>
 </main>
