adds new font, background color, cleans up lit section styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon</title>
     <link rel="stylesheet" href="./styles/CSS/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto&family=ZCOOL+QingKe+HuangYou&display=swap');
+    </style>
+
 </head>
 
 <body>
@@ -20,25 +24,22 @@
             </div>
         </div>
         <div class="gameboard">
-            <!-- <div class="console"> -->
-                
-                <section class="game-section" id="0"></section>
-                <section class="game-section" id="1"></section>
-                <section class="game-section" id="2"></section>
-                <section class="game-section" id="3"></section>
-
-            <!-- </div> -->
+            <section class="game-section" id="0"></section>
+            <section class="game-section" id="1"></section>
+            <section class="game-section" id="2"></section>
+            <section class="game-section" id="3"></section>
         </div>
-    <h3 id="userScore"> Score: 0</h3>
-    <h3 id="highScore"> High Score: 0</h3>
-    <button onclick="compTurn()" id="start">New game</button>
-    <div class="tooltip">About Simon
-        <span class="tooltip-text" > Based on the classic handheld game of the same name, Simon is a simple one-person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it.
+        <h3 id="userScore"> Score: 0</h3>
+        <h3 id="highScore"> High Score: 0</h3>
+        <button onclick="compTurn()" id="start">New game</button>
+        <div class="tooltip">About Simon
+            <span class="tooltip-text"> Based on the classic handheld game of the same name, Simon is a simple
+                one-person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it.
 
-        One mistake and the game is over!!</span>
-    </div>
-    <p class="footer">Built by <a href='https://www.github.com/enbre' target='_blank' > Noah Brezel</a> </p>
-</main>
+                One mistake and the game is over!!</span>
+        </div>
+        <p class="footer">Built by <a href='https://www.github.com/enbre' target='_blank'> Noah Brezel</a> </p>
+    </main>
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
 
