finalizes game styling

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
         <h3 id="highScore"> High Score: 0</h3>
         <button onclick="compTurn()" id="start">New game</button>
         <div class="tooltip">About Simon
-            <span class="tooltip-text"> Based on the classic handheld game of the same name, Simon is a simple
-                one-person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it.
-
-                One mistake and the game is over!!</span>
+            <span class="tooltip-text"> Based on the classic handheld game of the same name, Simon is a simple, one-person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it.
+            
+            One mistake and the game is over!!</span>
         </div>
         <p class="footer">Built by <a href='https://www.github.com/enbre' target='_blank'> Noah Brezel</a> </p>
     </main>
