--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simon</title>
+    <title>SIMON</title>
+    <link rel="icon" href="./assets/favicon.png" type="image/icon" sizes="30x30">
     <link rel="stylesheet" href="./styles/CSS/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&family=ZCOOL+QingKe+HuangYou&display=swap');
