adds toggle button

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
         <h3 id="userScore"> Score: 0</h3>
         <h3 id="highScore"> High Score: 0</h3>
         <button onclick="compTurn()" id="start">New game</button>
-        <button onclick="muteSound()" id="sound" value="true" > sound </button>
-        <!-- <button onclick="muteSound()" id="sound" value="true"> <i class="material-icons"> &#xe050; </i></button> -->
-        <!-- <button onclick="muteSound()" id="sound2" value="true" class="material-icons"> &#xe050; </button> -->
+        <button onclick="muteSound()" id="sound" value="true" class="material-icons"> volume_up</button>
         <div class="tooltip">About Simon
             <span class="tooltip-text"> Based on the classic handheld game of the same name, Simon is a simple, one-person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it.
             
