--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
         <h3 id="userScore"> Score: 0</h3>
         <h3 id="highScore"> High Score: 0</h3>
         <button onclick="compTurn()" id="start">New game</button>
-        <button onclick="muteSound()" id="sound" value="true" class="material-icons"> volume_up</button>
+        <!-- <button onclick="muteSound()" id="sound" value="true" class="material-icons"> volume_up</button> -->
+        <span >sounds
+            <label class="switch">
+                <input type="checkbox">
+                <span class="slider"></span>
+            </label>
+        </span>
+        
         <div class="tooltip">About Simon
             <span class="tooltip-text"> Based on the classic handheld game of the same name, Simon is a simple, one-person puzzle. Each round, the computer adds one lit section to its pattern, and you try to repeat it.
             
