sets mute functionality to toggle switch

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
         <h3 id="userScore"> Score: 0</h3>
         <h3 id="highScore"> High Score: 0</h3>
         <button onclick="compTurn()" id="start">New game</button>
-        <!-- <button onclick="muteSound()" id="sound" value="true" class="material-icons"> volume_up</button> -->
         <span >sounds
             <label class="switch">
-                <input type="checkbox">
+                <input type="checkbox" id="sounds">
                 <span class="slider"></span>
             </label>
         </span>
