--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
 <body>
     <main class="main">
+        <div id="backButton"> 
+            <a href='https://www.noahbrezel.com' target='_blank'> 
+            <span>Built by</span>
+            <span> Noah Brezel</span>
+            </a>
+        </div>
         <h1 id="gameStatus"> Welcome to Simon!</h1>
         <div id="gameOverModal" class='modal'>
             <div class="modal-content">
@@ -48,7 +54,7 @@
             
             One mistake and the game is over!!</span>
         </div>
-        <p class="footer">Built by <a href='https://www.github.com/enbre' target='_blank'> Noah Brezel</a> </p>
+        <p class="footer">Check out the <a href='https://www.github.com/enbre/simon' target='_blank'> code</a> </p>
     </main>
 </body>
 <script type="text/javascript" src="./main.js" defer></script>
