adds alternate sound effects with switch

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         <h3 id="userScore"> Score: 0</h3>
         <h3 id="highScore"> High Score: 0</h3>
         <button onclick="compTurn()" id="start">New game</button>
+        <span >mute
+            <label class="switch">
+                <input type="checkbox" id="mute">
+                <span class="slider"></span>
+            </label>
+        </span>
         <span >sounds
             <label class="switch">
                 <input type="checkbox" id="sounds">
