--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
         <h3 id="userScore"> Score: 0</h3>
         <h3 id="highScore"> High Score: 0</h3>
         <button onclick="compTurn()" id="start">New game</button>
-        <span >mute
+        <span >sound
             <label class="switch">
                 <input type="checkbox" id="mute">
                 <span class="slider"></span>
             </label>
         </span>
-        <span >sounds
+        <span >
+            <p id ="soundType">Beeps</p>
             <label class="switch">
                 <input type="checkbox" id="sounds">
                 <span class="slider"></span>
